Always use '/' in test paths

It does not make much sense to use a platform-dependent
directory separator in these strings, since they are not
filesystem paths.

https://bugzilla.gnome.org/show_bug.cgi?id=673216